local.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: hello-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: hello-app
        image: webapp:3
        # for local development against minikube registry
        #imagePullPolicy: Never        
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  labels:
    app: hello-service
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
    - port: 80
  # label keys and values that must match in order to receive traffic for this service
  selector:
    app: hello-app
